--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Zavier Romano</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Computer Science Student</p>
-            <img src="img/4C5A9A08-1625-4E4A-946F-FE6ADA6856E1_1_101_o.jpeg" alt="picture of myself">
+            <p class="section__subtitle section__subtitle--intro">CS Student</p>
+            <img src="img/62E72A08-87B3-4056-A4E5-C8E17A0F4325_1_105_c.jpeg" alt="picture of myself" class="intro__img">
         </section>
 
         <!--My Services-->
 
-        <section class="my_services" id="services">
+        <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service"> <!--Service-->
@@ -64,18 +64,18 @@
                 </div>
             </div> <!--Close Services-->
 
-            <a href="#work" class="btn">My Work</a>
+            <a href="work" class="btn">My Work</a>
         </section>
 
         <!--About Me-->
 
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">Student at Clevleand State University</p>
             
             <div class="about-me__body">
-                <p></p>
-                <p></p>
+                <p>Student at cleveland state</p>
+                <p>who is a programmer</p>
             </div>
 
             <img src="img/9E070DB7-C0C3-45CC-A9AC-41619491AFE0_1_105_c.jpeg" alt="Zavier smiling">
