Styled 'Who I am' Section

--- a/index.html
+++ b/index.html
@@ -45,21 +45,34 @@
                 <div class="service"> <!--Service-->
                     <h3>Hello</h3>
                     <p>fpaihefapiohfapurhfgapifha
-                        pawhefowehfapowuehfaehf
+                        pidjfpaosdrjafporsjfpiusfsrjfajsfsef
+                        sefses
+                        efsef
+                        sefsefas;orfuhasefoahseuf
+                        asef;haeofhasepofhaspuiefh
+                        
                     </p>
                 </div>
 
                 <div class="service"> <!--Service-->
                     <h3>Hello</h3>
-                    <p>fpaihurfapiurhfpiurhfirh
-                        a;orhgaperoiguhaperiguheirg
+                    <p>fpaihefapiohfapurhfgapifha
+                        pidjfpaosdrjafporsjfpiusfsrjfajsfsef
+                        sefses
+                        efsef
+                        sefsefas;orfuhasefoahseuf
+                        asef;haeofhasepofhaspuiefh
                     </p>
                 </div>
 
                 <div class="service"> <!--Service-->
                     <h3>Hello</h3>
-                    <p>apsoifharpifpirefgahergiusaherg
-                        aiuehrapeirghaeirgheirghaeirghaper
+                    <p>fpaihefapiohfapurhfgapifha
+                        pidjfpaosdrjafporsjfpiusfsrjfajsfsef
+                        sefses
+                        efsef
+                        sefsefas;orfuhasefoahseuf
+                        asef;haeofhasepofhaspuiefh
                     </p>
                 </div>
             </div> <!--Close Services-->
@@ -74,11 +87,18 @@
             <p class="section__subtitle section__subtitle--about">Student at Clevleand State University</p>
             
             <div class="about-me__body">
-                <p>Student at cleveland state</p>
-                <p>who is a programmer</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</p>
             </div>
 
-            <img src="img/9E070DB7-C0C3-45CC-A9AC-41619491AFE0_1_105_c.jpeg" alt="Zavier smiling">
+            <img src="img/Portrait_Placeholder.png" alt="Zavier smiling" class="about-me__img">
 
         </section>
 
