--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!--My work-->
         <section class="my-work" id="work">
             <h2 class="section__title">My Work</h2>
-            <p class="section__subtitle"></p>
+            <p class="section__subtitle--work">A selection of my range of work</p>
 
             <div class="portfolio">
                 <!--Portfolio item #1-->
@@ -133,10 +133,10 @@
         </section>
 
         <!--Footer-->
-        <footer>
+        <footer class = "footer">
             <a href="mailto:zavier.romano@yahoo.com" class="footer-link">Zavier.romano@yahoo.com</a>
             <ul class="social-list">
-                <li class="social-list__item"><a class="social-list__link" href="twitter.com">a</a></li>
+                <li class="social-list__item"><a class="social-list__link" href="twitter.com">Github</a></li>
                 <li class="social-list__item"><a class="social-list__link" href="twitter.com">b</a></li>
                 <li class="social-list__item"><a class="social-list__link" href="twitter.com">c</a></li>
                 <li class="social-list__item"><a class="social-list__link" href="twitter.com">d</a></li>
