--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src=""
+                <img src="img/portfolio.jpeg"
 
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
@@ -34,7 +34,7 @@
                 Hi, I am <strong>Zavier Romano</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">CS Student</p>
-            <img src="img/62E72A08-87B3-4056-A4E5-C8E17A0F4325_1_105_c.jpeg" alt="picture of myself" class="intro__img">
+            <img src="img/Prom.PNG" alt="picture of myself" class="intro__img">
         </section>
 
         <!--My Services-->
@@ -144,6 +144,7 @@
             </ul>
         </footer>
 
+        <script src ="index.js"></script>
         
     </body>
 </html>
